# LLAMA-DX

./: .gitignore  CURRENT-STATUS.md  DXLA_FIRST_PASS.md  HOW-TO-FIX.md  KNOWN-ISSUE-dx12-moe-cpu-offload-crash.md  KNOWN-ISSUE-test-backend-ops-crashes.md  OPTIMIZATION_ROADMAP.md  RDNA4_MEMORY_HIERARCHY_REPORT.md  README.md  SESSION_CONTEXT.md  WHAT-TO-FIX-DONT-TOUCH-REST.md  WHAT-TO-FIX.md  WHAT-WE-ARE-FIXING.md  bench2.txt  bench_results.txt  recovered-context-2026-07-10_185618.md  updated-context-2026-07-10_164824.md
docs/: DIST-README.md  PERF-DEEPDIVE-2026-07-18.md
ggml/: CMakeLists.txt
ggml-backend-dx12/: INTEGRATION_GUIDE.md  README-DX12.md  build-dx12.ps1  dx12_buffer.cpp  dx12_buffer.h  dx12_gemm.h  dx12_profiler.h
ggml-backend-dx12/shaders/: CMakeLists.txt  mul.hlsl  mul_mat_dxla_wave_f16_f16.hlsl  mul_mat_dxla_wave_q4_0_f16.hlsl  permute.hlsl  scale.hlsl  soft_max.hlsl
ggml-backend-dx12/tests/: CMakeLists.txt  test_dx12_device.cpp  test_dx12_gemm.cpp  test_dx12_stability.cpp
ggml/ggml/include/: ggml-backend.h
ggml/ggml/src/: CMakeLists.txt  ggml-backend-reg.cpp
ggml/ggml/src/ggml-dx12/: CMakeLists.txt  README-DX12.md  agility_shim.cpp  dx12_buffer.cpp  dx12_buffer.h  dx12_command.cpp  dx12_command.h  dx12_descriptor.cpp  dx12_descriptor.h  dx12_device.cpp  dx12_device.h  dx12_gemm.cpp  dx12_graph.cpp  dx12_graph.cpp.bak  dx12_graph.h  dx12_profiler.cpp  dx12_profiler.h  dx12_quantize.cpp  dx12_ring.cpp  dx12_ring.h  dx12_shader.cpp  dx12_shader.h  dx12_shader_cache.cpp  ggml-backend-dx12.cpp  ggml-backend-dx12.h
ggml/ggml/src/ggml-dx12/graphify-out/: .graphify_labels.json  .graphify_root  GRAPH_REPORT.md  graph.html  graph.json
ggml/ggml/src/ggml-dx12/graphify-out/cache/: stat-index.json
ggml/ggml/src/ggml-dx12/shaders/: _probe_test.cso  add.hlsl  attn_ov_dxla.cso  attn_ov_dxla.hlsl  attn_qk_dxla.hlsl  cast_bf16_f16.hlsl  common.hlsli  compile_shaders.ps1  copy.hlsl  cpy_gen.hlsl  dequant_q6_k.hlsl  diag_mask_inf.hlsl  dxla_minimal.asm  dxla_minimal.cso  ew_glu.hlsl  ew_unary.hlsl  ffn_fused.hlsl  flash_attn.hlsl  get_rows.hlsl  get_rows_x.hlsl  mm_f16.hlsl  mm_f32.hlsl  mm_f32_tiled.hlsl  mms_f16.hlsl  mul.hlsl  mul_mat_batched.hlsl  mul_mat_dxla_tg_f16_f16.cso  mul_mat_dxla_tg_f16_f16.hlsl  mul_mat_dxla_wave_f16_f16.cso  mul_mat_dxla_wave_f16_f16.hlsl  mul_mat_dxla_wave_f16_f16_O0.cso  mul_mat_dxla_wave_f16_f16_O1.asm  mul_mat_dxla_wave_f16_f16_O1.cso  mul_mat_dxla_wave_f16_f16_dumpbin.cso  mul_mat_dxla_wave_f16_f16_dxc02.cso  mul_mat_dxla_wave_f16_f16_rowmajor.hlsl  mul_mat_dxla_wave_q4_0_f16.cso  mul_mat_dxla_wave_q4_0_f16.hlsl  mul_mat_f16_f16.hlsl  mul_mat_f16_f32.hlsl  (+15 more)
ggml/ggml/src/ggml-dx12/tests/: CMakeLists.txt  agility_exports.def  test_covec.hlsl  test_dx12_e2e.cpp  test_dx12_gemm.cpp  test_dx12_model_load.cpp  test_dx12_ops.cpp  test_dx12_quantize.cpp  test_dx12_registry.cpp  test_dx12_shader_perf.cpp  test_dxla_wave_bench.cpp  test_dxla_wave_trans_bench.cpp  test_sm610_dxla_probe.cpp  test_upload_bench.cpp
ggml/ggml/src/ggml-dx12/tests/sm_tests/: sm610_dxla_b.cso  sm610_dxla_w.cso  sm610_rm_b.cso  sm68.cso  sm69.cso  test_sm610_dxla.hlsl  test_sm610_rowmajor.hlsl  test_sm66.hlsl
ggml/include/: ggml-dx12.h
ggml/src/ggml-dx12/: CMakeLists.txt  README-DX12.md  TRACE-gemv-direct-path-opt.md  dx12_backend_exports.def  dx12_buffer.cpp  dx12_buffer.h  dx12_command.cpp  dx12_command.h  dx12_descriptor.cpp  dx12_descriptor.h  dx12_device.cpp  dx12_device.h  dx12_ds.cpp  dx12_ds.h  dx12_gemm.cpp  dx12_graph.cpp  dx12_graph.h  dx12_profiler.cpp  dx12_profiler.h  dx12_quantize.cpp  dx12_quantize.h  dx12_ring.cpp  dx12_ring.h  dx12_shader.cpp  dx12_shader.h  dx12_shader_cache.cpp  dx12_shader_cache.h  ggml-backend-dx12.cpp  ggml-backend-dx12.h  llama_cpp_dx12_component_plan.md
ggml/src/ggml-dx12/docs/: OPTIMIZATION_ROADMAP.md
ggml/src/ggml-dx12/shaders/: CMakeLists.txt  DX12_AI_PIPELINE.hlsli  HOW-TO-FIX.md  _probe_test.hlsl  attn_qk_dxla.cso  attn_qk_dxla.hlsl  cast_f16_f32.hlsl  common.hlsli  compile_shaders.ps1  copy.hlsl  dequant_q4_0.hlsl  dequant_q4_k.hlsl  dequant_q5_k.hlsl  dequant_q6_k.hlsl  dequant_q8_0.hlsl  diag_mask_inf.hlsl  dxc2605_24_nodebug.cso  dxla_minimal.hlsl  ew_bin.hlsl  ew_scale.hlsl  ew_unary.hlsl  fa_combine.hlsl  fa_split.hlsl  ffn_fused.hlsl  flash_attn.hlsl  flash_attn_ext.hlsl  flash_attn_ext_mq.hlsl  flash_attn_ext_tiled.hlsl  fused_ffn_q4k.hlsl  fused_gemm_add_q4k.hlsl  fwht_row.hlsl  gelu.hlsl  generate_registry.cmake  get_rows.hlsl  get_rows_x.hlsl  kquants.hlsli  layer_norm.hlsl  mm_f16_tiled.hlsl  mm_f32_tiled.hlsl  mm_fused_act.hlsl  (+47 more)
ggml/src/ggml-dx12/tests/: CMakeLists.txt  test_dx12_buffer.cpp  test_dx12_ds.cpp  test_dx12_e2e.cpp  test_dx12_gemm.cpp  test_dx12_layer.cpp  test_dx12_ops.cpp  test_dxla_wave_bench.cpp  test_dxla_wave_trans_bench.cpp  test_gpu_upload_bench.cpp  test_minimal_dispatch.cpp  test_ring_bench.cpp  test_upload_bench.cpp
ggml/src/ggml-dx12/tests/sm_tests/: sm610_rm_w.cso  sm66_b.cso  sm66_w.cso  test_sm68.hlsl  test_sm69.hlsl
ggml/src/ggml-vulkan/: ggml-vulkan.cpp
src/: llama-arch.cpp  llama-arch.h  llama-context.cpp  llama-cparams.h  llama-hparams.h  llama-mmap.cpp  llama-mmap.h  llama-model-loader.cpp  llama-model.cpp  llama-model.h  llama-vocab.cpp
src/models/: laguna.cpp  models.h
tests/: test-backend-ops.cpp
tools/cli/: main.cpp
tools/llama-bench/: CMakeLists.txt  agility_shim.cpp
